--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,296 +1,122 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. 
-# See: https://circleci.com/docs/configuration-reference  
-version: 2.1 
+version: 2.1
 
+# --- TEMPLATES ---
 job_templates:
-  docker_sleep_job: &docker_sleep_job
+  # Template for the 27 long-running jobs (10 minutes)
+  long_sleep_job: &long_sleep_job
     docker:
       - image: cimg/base:current
     resource_class: small
     steps:
-      # - checkout
       - run:
-          name: "sleep a while"
-          command: "sleep 10"
+          name: "Sleep for 10 minutes"
+          command: "sleep 600"
 
-  windows_sleep_job: &windows_sleep_job
-    machine:
-      image: windows-server-2022-gui:current # Specify a Windows image
-    resource_class: 'windows.large' # Use the 'small' resource class for Windows
-    steps:
-      # - checkout
-      - run:
-          name: "sleep a while on Windows"
-          command: sleep 12
+  # Template for generic short jobs (we will override the time)
+  short_sleep_job: &short_sleep_job
+    docker:
+      - image: cimg/base:current
+    resource_class: small
 
-parameters:
-    temp:
-        type: boolean
-        default: true
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
+# --- JOB DEFINITIONS ---
 jobs:
-  self-host-test:
-    machine: true
-    resource_class: aws-ec2-runner/micro
+  # The 3 Short Jobs
+  job_1_60s:
+    <<: *short_sleep_job
     steps:
-      - run: 
-          name: "Run a 6-hour job with regular output"
-          command: |
-            echo "Starting 6-hour process..."
-            for i in $(seq 1 360); do
-              echo "[Minute $i of 360] Process is still running..."
-              sleep 120
-            done
+      - run:
+          name: "Short Sleep 60s"
+          command: "sleep 60"
 
-  sleep_0:
-    docker:
-      - image: cimg/base:current
-    resource_class: small
-    
-    # Add steps to the job
+  job_2_90s:
+    <<: *short_sleep_job
     steps:
-      # Checkout the code as the first step.
-      # - checkout
       - run:
-          name: "sleep for 18 s, test hello from fork"
-          command: "sleep 18"
-          
-  sleep:
-    # docker:
-      # - image: cimg/base:current
-    # resource_class: large
-    macos:
-      xcode: "16.4.0"
-    resource_class: macos.m1.medium.gen1
-    # Add steps to the job
+          name: "Short Sleep 90s"
+          command: "sleep 90"
+
+  job_3_120s:
+    <<: *short_sleep_job
     steps:
-      # Checkout the code as the first step.
-      # - checkout
       - run:
-          name: "sleep for 1 minute"
-          command: |
-            NUM_LOOPS=24
-            
-            echo "Starting loop. Will run $NUM_LOOPS times (5 min each)."
+          name: "Short Sleep 120s"
+          command: "sleep 120"
 
-            for i in $(seq 1 $NUM_LOOPS); do
-              echo "Loop $i/$NUM_LOOPS: Job is running... $(date)"
-              sleep 300 # 5 minutes
-            done
-
-            echo "Loop finished."
-
-  sleep_2:
-    # docker:
-    #   - image: cimg/base:current
-    # resource_class: large
-    # Add steps to the job
-    macos:
-      xcode: "16.4.0"
-    resource_class: macos.m1.medium.gen1
-    steps:
-      # Checkout the code as the first step.
-      # - checkout
-      - run:
-          name: "sleep a while for fork repo"
-          command: "sleep 31"
-
-  sleep_3_default:
-    docker:
-      - image: cimg/base:current
-    resource_class: small 
-    steps:
-      - checkout
-      - run:
-          name: "sleep a while for fork repo"
-          # command: "sleep 31"
-          command: |
-            echo "Starting 6-hour process..."
-            for i in $(seq 1 360); do
-              echo "[Minute $i of 360] Process is still running..."
-              sleep 60
-            done
-
-  # Use the template to create jobs sleep_3 through sleep_32
-  sleep_3:
-    <<: *docker_sleep_job
-  sleep_4:
-    <<: *docker_sleep_job
-  sleep_5:
-    <<: *docker_sleep_job
-  sleep_6:
-    <<: *docker_sleep_job
-  sleep_7:
-    <<: *docker_sleep_job
-  sleep_8:
-    <<: *docker_sleep_job
-  sleep_9:
-    <<: *docker_sleep_job
-  sleep_10:
-    <<: *docker_sleep_job
-  sleep_11:
-    <<: *docker_sleep_job
-  sleep_12:
-    <<: *docker_sleep_job
-  sleep_13:
-    <<: *docker_sleep_job
-  sleep_14:
-    <<: *docker_sleep_job
-  sleep_15:
-    <<: *docker_sleep_job
-  sleep_16:
-    <<: *docker_sleep_job
-  sleep_17:
-    <<: *docker_sleep_job
-  sleep_18:
-    <<: *docker_sleep_job
-  sleep_19:
-    <<: *windows_sleep_job
-  sleep_20:
-    <<: *windows_sleep_job
-  sleep_21:
-    <<: *windows_sleep_job
-  sleep_22:
-    <<: *windows_sleep_job
-  sleep_23:
-    <<: *windows_sleep_job
-  sleep_24:
-    <<: *windows_sleep_job
-  sleep_25:
-    <<: *windows_sleep_job
-  sleep_26:
-    <<: *windows_sleep_job
-  sleep_27:
-    <<: *windows_sleep_job
-  sleep_28:
-    <<: *windows_sleep_job
-  sleep_29:
-    <<: *windows_sleep_job
-  sleep_30:
-    <<: *windows_sleep_job
-  sleep_31:
-    <<: *windows_sleep_job
-  sleep_32:
-    <<: *windows_sleep_job
-  sleep_33:
-    <<: *windows_sleep_job
-  sleep_34:
-    <<: *windows_sleep_job
-  sleep_35:
-    <<: *windows_sleep_job
-
-  cpu-stress-test:
-    docker:
-      - image: cimg/base:current
-    resource_class: small    
-    steps:
-      - checkout
-      - run:
-          name: "Install stress package (if needed)"
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y stress
-      - run:
-          name: "Run CPU stress test"
-          command: |
-            chmod +x cpu_stress.sh
-            ./cpu_stress.sh
+  # The 27 Long Jobs (Using the 10-minute template)
+  job_4:
+    <<: *long_sleep_job
+  job_5:
+    <<: *long_sleep_job
+  job_6:
+    <<: *long_sleep_job
+  job_7:
+    <<: *long_sleep_job
+  job_8:
+    <<: *long_sleep_job
+  job_9:
+    <<: *long_sleep_job
+  job_10:
+    <<: *long_sleep_job
+  job_11:
+    <<: *long_sleep_job
+  job_12:
+    <<: *long_sleep_job
+  job_13:
+    <<: *long_sleep_job
+  job_14:
+    <<: *long_sleep_job
+  job_15:
+    <<: *long_sleep_job
+  job_16:
+    <<: *long_sleep_job
+  job_17:
+    <<: *long_sleep_job
+  job_18:
+    <<: *long_sleep_job
+  job_19:
+    <<: *long_sleep_job
+  job_20:
+    <<: *long_sleep_job
+  job_21:
+    <<: *long_sleep_job
+  job_22:
+    <<: *long_sleep_job
+  job_23:
+    <<: *long_sleep_job
+  job_24:
+    <<: *long_sleep_job
+  job_25:
+    <<: *long_sleep_job
+  job_26:
+    <<: *long_sleep_job
+  job_27:
+    <<: *long_sleep_job
+  job_28:
+    <<: *long_sleep_job
+  job_29:
+    <<: *long_sleep_job
+  job_30:
+    <<: *long_sleep_job
 
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
+# --- WORKFLOWS ---
 workflows:
-
-  say-hello-workflow_orig: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  # Keep your original workflow logic
+  say-hello-workflow_orig:
     when:
       equal: [<<pipeline.project.git_url>>, https://github.com/anonymoustest03/gatest1-03]
-      # and:
-      #      - equal: [<<pipeline.project.git_url>>, https://github.com/anonymoustest03/gatest1-03]
-      #      - <<pipeline.parameters.nightly>>
     jobs:
-      # - sleep_3_default
-      - sleep_0
-      # - sleep
-      # - sleep_2
-      # - sleep_3
-      # - sleep_4
-      # - sleep_5
-      # - sleep_6
-      # - sleep_7
-      # - sleep_8
-      # - sleep_9
-      # - sleep_10
-      # - sleep_11
-      # - sleep_12
-      # - sleep_13
-      # - sleep_14
-      # - sleep_15
-      # - sleep_16
-      # - sleep_17
-      # - sleep_18
-      # - sleep_19
-      # - sleep_20
-      # - sleep_21
-      # - sleep_22
-      # - sleep_23
-      # - sleep_24
-      # - sleep_25
-      # - sleep_26
-      # - sleep_27
-      # - sleep_28
-      # - sleep_29
-      # - sleep_30
-      # - sleep_31
-      # - sleep_32
-      # - sleep_33
-      # - sleep_34
-      # - sleep_35
-      # - cpu-stress-test
-      # - self-host-test
+      - job_1_60s
+
+  # This is the workflow that will run on your FORK
+  say-hello-workflow_from_fork:
+    when:
+      not:
+        equal: [<<pipeline.project.git_url>>, https://github.com/anonymoustest03/gatest1-03]
+    jobs:
+      # The 3 short jobs
+      # - job_1_60s
+      - job_2_90s
+      # - job_3_120s
       
 
-  say-hello-workflow_from_fork: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
-    when:
-            not:
-                 equal: [<<pipeline.project.git_url>>, https://github.com/anonymoustest03/gatest1-03]
-    jobs:
-      - sleep_0
-      # - sleep
-      # - sleep_2
-      # - sleep_3
-      # - sleep_4
-      # - sleep_5
-      # - sleep_6
-      # - sleep_7
-      # - sleep_8
-      # - sleep_9
-      # - sleep_10
-      # - sleep_11
-      # - sleep_12
-      # - sleep_13
-      # - sleep_14
-      # - sleep_15
-      # - sleep_16
-      # - sleep_17
-      # - sleep_18
-      # - sleep_19
-      # - sleep_20
-      # - sleep_21
-      # - sleep_22
-      # - sleep_23
-      # - sleep_24
-      # - sleep_25
-      # - sleep_26
-      # - sleep_27
-      # - sleep_28
-      # - sleep_29
-      # - sleep_30
-      # - sleep_31
-      # - sleep_32
-      # - sleep_33
-      # - sleep_34
-      # - sleep_35
