--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,21 +102,42 @@ jobs:
 # --- WORKFLOWS ---
 workflows:
   # Keep your original workflow logic
-  say-hello-workflow_orig:
+  send_job_1_30:
     when:
       equal: [<<pipeline.project.git_url>>, https://github.com/anonymoustest03/gatest1-03]
     jobs:
       - job_1_60s
-
-  # This is the workflow that will run on your FORK
-  say-hello-workflow_from_fork:
-    when:
-      not:
-        equal: [<<pipeline.project.git_url>>, https://github.com/anonymoustest03/gatest1-03]
-    jobs:
-      # The 3 short jobs
-      # - job_1_60s
       - job_2_90s
-      # - job_3_120s
+      - job_3_120s
+      
+      # The 27 long jobs
+      - job_4
+      - job_5
+      - job_6
+      - job_7
+      - job_8
+      - job_9
+      - job_10
+      - job_11
+      - job_12
+      - job_13
+      - job_14
+      - job_15
+      - job_16
+      - job_17
+      - job_18
+      - job_19
+      - job_20
+      - job_21
+      - job_22
+      - job_23
+      - job_24
+      - job_25
+      - job_26
+      - job_27
+      - job_28
+      - job_29
+      - job_30
+
       
 
